http or https management

--- a/platforms/android/build.gradle
+++ b/platforms/android/build.gradle
@@ -87,6 +87,7 @@ ext {
 
 // PLUGIN GRADLE EXTENSIONS START
 apply from: "phonegap-plugin-push/esup_otp_push-push.gradle"
+apply from: "phonegap-plugin-barcodescanner/esup_otp_push-barcodescanner.gradle"
 // PLUGIN GRADLE EXTENSIONS END
 
 def hasBuildExtras = file('build-extras.gradle').exists()
