--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -16,3 +16,4 @@ cordova.gradle.include.1=phonegap-plugin-push/esup_otp_push-push.gradle
 cordova.system.library.1=com.android.support:support-v13:23+
 cordova.system.library.2=com.google.android.gms:play-services-gcm:9.0.2+
 cordova.system.library.3=me.leolin:ShortcutBadger:1.1.4@aar
+cordova.gradle.include.2=phonegap-plugin-barcodescanner/esup_otp_push-barcodescanner.gradle
