--- a/platforms/ios/Esup Auth/Esup Auth-Info.plist
+++ b/platforms/ios/Esup Auth/Esup Auth-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en_US</string>
+	<string>fr</string>
 	<key>CFBundleDisplayName</key>
 	<string>Esup Auth</string>
 	<key>CFBundleExecutable</key>
