add privacy camera to scan qrcode

--- a/platforms/ios/Esup Auth/Esup Auth-Info.plist
+++ b/platforms/ios/Esup Auth/Esup Auth-Info.plist
@@ -6,6 +6,8 @@
 	<string>fr</string>
 	<key>CFBundleDisplayName</key>
 	<string>Esup Auth</string>
+        <key>NSCameraUsageDescription</key>
+        <string>Need camera to scan qrcode</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
