--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
+      "cordova-plugin-android-permissions": {},
       "phonegap-plugin-barcodescanner": {}
     }
   },
@@ -30,6 +31,7 @@
     "cordova-android": "^12.0.0",
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^6.2.0",
+    "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-app-exit": "^0.0.2",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-splashscreen": "^6.0.2",
