darmode with last stash

--- a/platforms/ios/Esup Auth/Esup Auth-Info.plist
+++ b/platforms/ios/Esup Auth/Esup Auth-Info.plist
@@ -25,7 +25,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NFCReaderUsageDescription</key>
-	<string>Cette application utilise le NFC pour scanner des cartes étudiantes ou professionnelles.</string>
+	<string>Read NFC Tags</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
