--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "cordova": {
     "platforms": [
       "browser",
-      "android",
-      "ios"
+      "ios",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-splashscreen": {},
@@ -24,12 +24,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-android-permissions": {},
       "phonegap-plugin-barcodescanner": {},
-      "phonegap-nfc": {
-        "NFC_USAGE_DESCRIPTION": "Read NFC Tags"
-      },
       "cordova-plugin-advanced-http": {
         "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
-      }
+      },
+      "phonegap-nfc": {}
     }
   },
   "devDependencies": {
@@ -44,7 +42,9 @@
     "cordova-plugin-file": "^8.1.0",
     "cordova-plugin-splashscreen": "^6.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
+    "cordova-support-google-services": "~1.3.1",
     "phonegap-nfc": "^1.2.0",
-    "phonegap-plugin-barcodescanner": "^8.1.0"
+    "phonegap-plugin-barcodescanner": "^8.1.0",
+    "phonegap-plugin-multidex": "~1.0.0"
   }
 }
