--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
       "cordova-plugin-advanced-http": {
         "ANDROIDBLACKLISTSECURESOCKETPROTOCOLS": "SSLv3,TLSv1"
       },
-      "phonegap-nfc": {}
+      "community-cordova-plugin-nfc": {
+        "NFC_USAGE_DESCRIPTION": "Read NFC Tags"
+      }
     }
   },
   "devDependencies": {
     "@havesource/cordova-plugin-push": "^4.0.0-dev.0",
-    "cordova-android": "^12.0.0",
+    "community-cordova-plugin-nfc": "^1.4.0",
+    "cordova-android": "^13.0.0",
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^6.2.0",
     "cordova-plugin-advanced-http": "^3.3.1",
@@ -42,7 +45,6 @@
     "cordova-plugin-file": "^8.1.0",
     "cordova-plugin-splashscreen": "^6.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
-    "phonegap-nfc": "^1.2.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "phonegap-plugin-multidex": "~1.0.0"
   }
