FIX: iOS testFlight -> ajout NSCameraUsageDescription pour permettre le déploiement

--- a/platforms/ios/Esup Auth/Esup Auth-Info.plist
+++ b/platforms/ios/Esup Auth/Esup Auth-Info.plist
@@ -16,6 +16,8 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.3.0</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need camera to scan QrCode</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
