--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.0.15",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-default-preference": "^1.4.4",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-nfc-manager": "^3.16.1",
     "react-native-reanimated": "^3.17.1",
