--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,5 @@ extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autoli
 rootProject.name = 'org.esupportail.esupAuth'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+include ':react-native-default-preference'
+project(':react-native-default-preference').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-default-preference/android')
