--- a/ios/esupAuth/Info.plist
+++ b/ios/esupAuth/Info.plist
@@ -34,7 +34,7 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<false/>
+		<true/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
