--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.78.0",
     "react-native-default-preference": "^1.4.4",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-mmkv": "^3.2.0",
     "react-native-nfc-manager": "^3.16.1",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.2.0",
