--- a/package.json
+++ b/package.json
@@ -10,18 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.1.2",
     "@react-navigation/drawer": "^7.1.2",
     "@react-navigation/native": "^7.0.15",
+    "@react-navigation/stack": "^7.2.10",
+    "buffer": "^6.0.3",
     "react": "19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-native": "0.78.0",
+    "react-native-camera-kit": "^14.2.0",
+    "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-default-preference": "^1.4.4",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-nfc-manager": "^3.16.1",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
-    "react-native-webview": "^13.13.2"
+    "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.2",
+    "totp-generator": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
