--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.2.10",
     "buffer": "^6.0.3",
+    "lottie-react-native": "^5.1.6",
     "react": "19.0.0",
     "react-hook-form": "^7.55.0",
     "react-native": "0.78.0",
