--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,7 +83,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 10107
-        versionName "1.0"
+        versionName "1.1.7"
     }
     signingConfigs {
         debug {
@@ -91,6 +91,12 @@ android {
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
+        }
+        release {
+            storeFile file('/Users/pgmmen/Documents/EsupAuth.jks')
+            storePassword 'esupauth2020'
+            keyAlias 'EsupAuth'
+            keyPassword 'esupauth2020'
         }
     }
     buildTypes {
