--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-camera-kit": "^14.2.0",
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-default-preference": "^1.4.4",
+    "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^3.2.0",
