PUSH: Config iOS terminée

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,11 @@ platform :ios, min_ios_version_supported
 project 'esupAuth.xcodeproj'
 prepare_react_native_project!
 
+pod 'Firebase', :modular_headers => true
+pod 'FirebaseCoreInternal', :modular_headers => true
+pod 'GoogleUtilities', :modular_headers => true
+pod 'FirebaseCore', :modular_headers => true
+
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
