--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.2",
     "rxjs": "^7.8.2",
-    "totp-generator": "^1.0.0"
+    "totp-generator": "^1.0.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
