--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-keychain": "^10.0.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-nfc-manager": "^3.16.1",
     "react-native-reanimated": "^3.17.1",
