--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.2",
     "rxjs": "^7.8.2",
+    "toastify-react-native": "^7.2.3",
     "totp-generator": "^1.0.0",
     "zustand": "^5.0.5"
   },
