--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-keychain": "^10.0.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-nfc-manager": "^3.16.1",
+    "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
