--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.0.0",
     "react-hook-form": "^7.55.0",
     "react-native": "0.78.0",
+    "react-native-base64": "^0.2.2",
     "react-native-camera-kit": "^14.2.0",
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-default-preference": "^1.4.4",
@@ -33,6 +34,7 @@
     "react-native-mmkv": "^3.2.0",
     "react-native-nfc-manager": "^3.16.1",
     "react-native-permissions": "^5.4.2",
+    "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
