--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "axios": "^1.12.2",
     "buffer": "^6.0.3",
     "lottie-react-native": "^5.1.6",
-    "react": "19.0.0",
+    "react": "19.1.0",
     "react-hook-form": "^7.55.0",
-    "react-native": "0.78.0",
+    "react-native": "0.81.0",
+    "@react-native/new-app-screen": "0.81.0",
     "react-native-base64": "^0.2.2",
     "react-native-camera-kit": "^14.2.0",
     "react-native-countdown-circle-timer": "^3.2.1",
@@ -36,7 +37,7 @@
     "react-native-permissions": "^5.4.2",
     "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.2.0",
+    "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.9.1",
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
@@ -50,21 +51,21 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.78.0",
-    "@react-native/eslint-config": "0.78.0",
-    "@react-native/metro-config": "0.78.0",
-    "@react-native/typescript-config": "0.78.0",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
+    "@react-native/babel-preset": "0.81.0",
+    "@react-native/eslint-config": "0.81.0",
+    "@react-native/metro-config": "0.81.5",
+    "@react-native/typescript-config": "0.81.0",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
-    "@types/react-test-renderer": "^19.0.0",
+    "@types/react": "^19.1.0",
+    "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "react-test-renderer": "19.1.0",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=18"
