--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^22.1.0",
     "@react-native-firebase/messaging": "^22.1.0",
+    "@react-native/new-app-screen": "0.81.0",
     "@react-navigation/drawer": "^7.1.2",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.2.10",
@@ -23,7 +24,6 @@
     "react": "19.1.0",
     "react-hook-form": "^7.55.0",
     "react-native": "0.81.0",
-    "@react-native/new-app-screen": "0.81.0",
     "react-native-base64": "^0.2.2",
     "react-native-camera-kit": "^14.2.0",
     "react-native-countdown-circle-timer": "^3.2.1",
@@ -34,6 +34,7 @@
     "react-native-keychain": "^10.0.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-nfc-manager": "^3.16.1",
+    "react-native-nitro-modules": "^0.31.10",
     "react-native-permissions": "^5.4.2",
     "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "^3.17.1",
