--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,6 +31,12 @@
           <category android:name="android.intent.category.BROWSABLE" />
           <data android:scheme="esupauth" />
         </intent-filter>
+        <intent-filter>
+          <action android:name="android.intent.action.VIEW" />
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+          <data android:scheme="otpauth" />
+        </intent-filter>
       </activity>
     </application>
     <meta-data
